xine-lib (1.1.9.1) (unreleased)

xine-lib (1.1.9)
  * Fix dvd://.../title[.chapter] handling (somewhat broken in 1.1.8).
  * Fix switching DVB subtitles channels.
  * DVB sub: switch to dyn mem alloc and allow multiple CLUTs per page.
  * Check if DVB sub PTS is reliable and show sub immediately if it's not.
  * Fix incorrect H.264 detection on successive MPEG1/2 B frames.
  * Add UI option to configure FFmpeg's video decoder thread count.
  * Improve syncing of audio and video in the presence of bad frames.
  * Improve handling of invalid or unknown frame sizes.
  * Fixed handling of streamed Flash videos (broken in 1.1.5).
  * Fixed division by zero in sputext decoder
  * Build fix for when using Linux 2.6.23 headers. [Bug 1820958]
  * Implemented decoding of XML character entities with codes >= 256.
    This requires conversion to UTF-8 of entities with codes >= 128.
  * Handle initial Unicde BOMs in XML; convert other UTF encodings to UTF-8.
  * Fixed ATSC support. [Bug 1749508]
  * Fixed a possible DVB plugin crash when switching channels.
  * Fixed a crash closing the frontend. [Bug #7]
  * Fixed deadlock on ao_close while paused.
  * Nicer wakeup behaviour, using select instead of nanosleep (800 -> 100
    wakeups/s).
  * Fixed ALSA close function to not discard all data that had been written
    but not played yet.
  * Fixed a race condition between ao_loop and ao_close to not lose the last
    buffer.
  * DXR3 encoding with external ffmpeg should be fixed now.
    (This was broken by ffmpeg revision 9283).
  * Enabled the WMV VC1 & VMware Screen (ffmpeg) codecs.
  * Fixed a crash that happened when a video output was closed
  * Made the Real demuxer recognise simple lists of http references.
  * Require correct URL encoding of '#'s which aren't separators.
  * Don't decode %nn in raw filenames. [Bug 1784272]
  * Always enable a52dec capabilities for external a52dec, this makes it
    possible to use the DJB accelerated FFT when using the external a52dec